--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,9 +1,17 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(local); Database=EmployeeDb; Trusted_Connection=True; Trust Server Certificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSection": {
+    "Key": "Ida8E0aODJZs92j4UazTT",
+    "Issuer": "https://localhost:7260",
+    "Audience": "https://localhost:7260"
+  }
 }
