--- a/ServeLibrary/ServerLibrary.csproj
+++ b/ServeLibrary/ServerLibrary.csproj
@@ -20,8 +20,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Repositories\Contracts\" />
-	  <Folder Include="Repositories\Implementations\" />
+	  <ProjectReference Include="..\BaseLibrary\BaseLibrary.csproj" />
 	</ItemGroup>
 
 </Project>
